--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Worst Form — Flappy Input</title>
+  <title>Flappy Input</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -33,3 +33,4 @@
   <script src="js/game.js"></script>
 </body>
 </html>
+
